test/classes/initializers/phase1/hasParallelBad.good
hasParallelBad.chpl:7: error: field "a" initialized in parallel statement (fields must be initialized in order)
hasParallelBad.chpl:8: error: field "b" initialized in parallel statement (fields must be initialized in order)
